gcc/testsuite/rust/rustc/ui/privacy/sealed-traits/private-trait_dg.rs
pub mod a {
    mod b {
        pub trait Hidden {}
    }
}

struct S;
impl a::b::Hidden for S {} // { dg-error ".E0603." "" { target *-*-* } }

fn main() {}

